--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             background-position: center;
             margin: 0;
             padding: 0;
+            height: 100vh;
         }
 
         .list-unstyled {
@@ -30,6 +31,7 @@
             background-position: center;
             margin: 0;
             padding: 0;
+            height: 100vh;
         }
 
         #countrySelect {
